more tests for coverage